# pveauto

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/answer_file/: macros.rs  mod.rs
src/answer_file/sections/: mod.rs
src/answer_file/sections/global/: constants.rs  errors.rs  mod.rs  section.rs
src/answer_file/sections/global/models/: allowed_keyboards.rs  country.rs  mod.rs  reboot_mode.rs  timezone.rs
src/auto_installer/: auto_installer_main.rs
src/auto_installer/commands/: command_parser.rs  constants.rs  downloader.rs  mod.rs
src/auto_installer/dispatcher/: actions.rs  execute.rs  mod.rs
src/data/: country_codes.txt  timezones.txt
src/iso/: constants.rs  downloader.rs  mod.rs  scraper.rs
