[package]
name = "pveauto"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Anthony Tropeano anthonytropeano@me.com"]
homepage = "https://github.com/iiTONELOC/pveauto"
repository = "https://github.com/iiTONELOC/pveauto"

[dependencies]
oxdl = "0.1.4"
regex = "1.12.2"
reqwest = "0.12.25"
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[lib]  
doctest = false

[features]
test-iso-download = []