[package]
name = "pveauto"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Library and command-line tool designed to download and Verify Proxmox Virtual Environment ISO images automatically"
authors = ["Anthony Tropeano anthonytropeano@me.com"]
homepage = "https://github.com/iiTONELOC/pveauto"
repository = "https://github.com/iiTONELOC/pveauto"

[dependencies]
once_cell = "1.21.3"
oxdl = "0.1.5"
regex = "1.12.2"
reqwest = "0.12.25"
scraper = "0.25.0"
serde = "1.0.228"
sha2 = "0.10.9"
sshkeys = "0.3.4"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.10"

[lib]  
doctest = false

[features]
server = []
iso-scraper-tests = []
iso-download-tests = []
iso-tests = ["iso-scraper-tests", "iso-download-tests"]
